Contact *with*, Tools *used*

--- a/layouts/experience.html
+++ b/layouts/experience.html
@@ -10,13 +10,13 @@
   
   <% if @contact_with %>
     <p class="contact">
-      <span class="label">contact:</span> <%= @contact_with %>
+      <span class="label">contact with:</span> <%= @contact_with %>
     </p>
   <% end %>                            
   
   <% if @tools %>
     <p class="tools">
-      <span class="label">tools:</span> <%= @tools %>
+      <span class="label">tools used:</span> <%= @tools %>
     </p>
   <% end %>
   
