--- a/layouts/experience.html
+++ b/layouts/experience.html
@@ -1,25 +1,23 @@
 <li class="past-project">
-  <hgroup>
-    <h3><%= @title %></h3>
-    <h4><%= @client_url ? link_to(@client_name, @client_url, :target => "_blank") : @client_name %></h4>
-  </hgroup>
-  
+  <h3><%= @title %></h3>
+  <p class="client"><%= @client_url ? link_to(@client_name, @client_url, :target => "_blank") : @client_name %></p>
+
   <p class="period">
     <%= @date || "#{@started_in} -  #{@finished_in}" %>
   </p>
-  
+
   <% if @contact_with %>
     <p class="contact">
       <span class="label">contact with:</span> <%= @contact_with %>
     </p>
-  <% end %>                            
-  
+  <% end %>
+
   <% if @tools %>
     <p class="tools">
       <span class="label">tools used:</span> <%= @tools %>
     </p>
   <% end %>
-  
+
   <p class="description">
     <%= @description %>
   </p>
