--- a/content/stylesheets/short.scss
+++ b/content/stylesheets/short.scss
@@ -13,10 +13,13 @@ body {
 ul {
   list-style-type: none;
   padding: 0;
+  margin-top:    1em;
+  margin-bottom: 1em;
 }
 
 a {
-  padding: 0.6em 0;
+  padding: 0.3em 0;
+  display: inline-block;
 }
 
 .highlight {
