--- a/layouts/common/head.html
+++ b/layouts/common/head.html
@@ -4,4 +4,4 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" defer></script>
 
-<%= content_for(@item, :header) %>
+<%= content_for(@item, :header) || content_for(@item, :head) %>
