--- a/layouts/common/head.html
+++ b/layouts/common/head.html
@@ -1,3 +1,14 @@
+<meta name="description" content="<%= @item[:description] %>">
+
+<!-- Schema.org markup for Google+ -->
+<meta itemprop="name" content="<%= @item[:title] %>">
+<meta itemprop="description" content="<%= @item[:description] %>">
+<meta itemprop="image" content="<%= @item[:image] %>">
+
+<!-- Open Graph data -->
+<meta property="og:title" content="<%= @item[:title] %>" />
+<meta property="og:description" content="<%= @item[:description] %>" />
+<meta property="og:image" content="<%= @item[:image] %>" />
 <!--[if lt IE 9]>
 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
