--- a/layouts/profile.html
+++ b/layouts/profile.html
@@ -5,28 +5,18 @@
 
   <title><%= @item[:title] %></title>
 
-  <meta name="description" content="<%= ::Site::SUMMARY %>">
-
-  <!-- Schema.org markup for Google+ -->
-  <meta itemprop="name" content="<%= @item[:title] %>">
-  <meta itemprop="description" content="<%= ::Site::SUMMARY %>">
-  <meta itemprop="image" content="<%= ::Site::PROFILE_PIC %>">
-  <meta itemprop="url" content="http://www.maximeliron.com/short">
-
   <!-- Twitter Card data -->
   <meta name="twitter:site" content="@ximus">
   <meta name="twitter:title" content="<%= @item[:title] %>">
-  <meta name="twitter:description" content="<%= ::Site::SUMMARY %>">
+  <meta name="twitter:description" content="<%= @item[:description] %>">
   <meta name="twitter:creator" content="@ximus">
-  <meta name="twitter:image:src" content="<%= ::Site::PROFILE_PIC %>">
+  <meta name="twitter:image:src" content="<%= @item[:image] %>">
 
   <!-- Open Graph data -->
-  <meta property="og:title" content="<%= @item[:title] %>" />
   <meta property="og:type" content="profile" />
   <meta property="profile:first_name" content="maxime" />
   <meta property="profile:last_name" content="liron" />
-  <meta property="og:url" content="http://www.maximeliron.com/short" />
-  <meta property="og:image" content="<%= ::Site::PROFILE_PIC %>" />
+
 
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
