--- a/ximus.xyz/layouts/notes.html
+++ b/ximus.xyz/layouts/notes.html
@@ -9,8 +9,9 @@
 
   <%= render 'common/head'  %>
 
-  <link href='http://fonts.googleapis.com/css?family=Exo+2:600' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,400italic,500italic' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Exo+2:600' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Ubuntu:400,500,400italic,500italic' rel='stylesheet' type='text/css'>
+
   <link rel="stylesheet" href="/vendor/github-markdown-css/github-markdown.css">
   <link rel="stylesheet" href="/vendor/lightbox/css/lightbox.css">
   <link rel="stylesheet" href="/stylesheets/note.css">
