--- a/shared/layouts/common/head.html
+++ b/shared/layouts/common/head.html
@@ -13,6 +13,6 @@
 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" defer></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" defer></script>
 
 <%= content_for(@item, :header) || content_for(@item, :head) %>
