--- a/ximus.xyz/layouts/notes.html
+++ b/ximus.xyz/layouts/notes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title><%= @item[:title] %></title>
+  <title><%= [@item[:title].try(:titleize), 'ximus.xyz'].compact.join(' | ') %></title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 
@@ -15,19 +15,34 @@
   <link rel="stylesheet" href="/vendor/github-markdown-css/github-markdown.css">
   <link rel="stylesheet" href="/vendor/lightbox/css/lightbox.css">
   <link rel="stylesheet" href="/stylesheets/note.css">
-
-  <script src="/vendor/lightbox/js/lightbox.js" defer=""></script>
-  <script src="/javascripts/notes.js" defer=""></script>
 </head>
 
-<body class="markdown-body">
+<body>
+    <div id="slightly-off-center">
+      <div></div>
 
-  <article role="main">
-    <%= yield %>
-  </article>
+      <article role="main" class="markdown-body">
+        <%= yield %>
+      </article>
+
+      <div></div>
+    </div>
 
   <%= content_for(@item, :footer) %>
 
   <%= render 'common/footer'  %>
+
+  <script src="/vendor/lightbox/js/lightbox.js" defer=""></script>
+  <script src="/javascripts/notes.js" defer=""></script>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-25841356-2', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
