--- a/shared/layouts/common/head.html
+++ b/shared/layouts/common/head.html
@@ -1,4 +1,5 @@
 <meta name="description" content="<%= @item[:description] %>">
+<meta name="keywords" content="<%= @item[:keywords] %>">
 
 <!-- Schema.org markup for Google+ -->
 <meta itemprop="name" content="<%= @item[:title] %>">
