--- a/ximus.xyz/layouts/notes.html
+++ b/ximus.xyz/layouts/notes.html
@@ -1,46 +1,52 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
-  <title><%= [@item[:title].try(:titleize), 'ximus.xyz'].compact.join(' | ') %></title>
+  <title>
+    <%= [@item[:title].try(:titleize), 'ximus.xyz' ].compact.join(' | ') %></title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 
-  <%= render 'common/head'  %>
+  <%= render ' /common/head.*' %>
 
-  <link href='//fonts.googleapis.com/css?family=Exo+2:600' rel='stylesheet' type='text/css'>
-  <link href='//fonts.googleapis.com/css?family=Ubuntu:400,500,400italic,500italic' rel='stylesheet' type='text/css'>
+      <link href='//fonts.googleapis.com/css?family=Exo+2:600' rel='stylesheet' type='text/css'>
+      <link href='//fonts.googleapis.com/css?family=Ubuntu:400,500,400italic,500italic' rel='stylesheet'
+        type='text/css'>
 
-  <link rel="stylesheet" href="/vendor/github-markdown-css/github-markdown.css">
-  <link rel="stylesheet" href="/vendor/lightbox/css/lightbox.css">
-  <link rel="stylesheet" href="/stylesheets/note.css">
+      <link rel="stylesheet" href="/vendor/github-markdown-css/github-markdown.css">
+      <link rel="stylesheet" href="/vendor/lightbox/css/lightbox.css">
+      <link rel="stylesheet" href="/stylesheets/note.css">
 </head>
 
 <body>
-    <div id="slightly-off-center">
-      <div></div>
+  <div id="slightly-off-center">
+    <div></div>
 
-      <article role="main" class="markdown-body">
-        <%= yield %>
-      </article>
+    <article role="main" class="markdown-body">
+      <%= yield %>
+    </article>
 
-      <div></div>
-    </div>
+    <div></div>
+  </div>
 
-  <%= render 'common/footer'  %>
+  <%= render '/common/footer.*' %>
 
-  <script src="/vendor/lightbox/js/lightbox.js" defer=""></script>
-  <script src="/javascripts/notes.js" defer=""></script>
+    <script src="/vendor/lightbox/js/lightbox.js" defer=""></script>
+    <script src="/javascripts/notes.js" defer=""></script>
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+      (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+          (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+          m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-25841356-2', 'auto');
-    ga('send', 'pageview');
-  </script>
+      ga('create', 'UA-25841356-2', 'auto');
+      ga('send', 'pageview');
+    </script>
 </body>
+
 </html>
