--- a/maximeliron.com/layouts/default.html
+++ b/maximeliron.com/layouts/default.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
-  <title><%= @item[:title] %></title>
+  <title>
+    <%= @item[:title] %>
+  </title>
 
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <%= render 'common/head'  %>
+  <%= render '/common/head.*' %>
 </head>
 
 <body>
@@ -16,6 +19,7 @@
     <%= yield %>
   </div>
 
-  <%= render 'footer'  %>
+  <%= render '/footer.*' %>
 </body>
+
 </html>
